examples/nginx-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
              name: nginx-port
          volumeMounts:
            - mountPath: /natetesting
              name: mypvc-claim
          resources:
            requests:
              memory: "64Mi"
              cpu: "15m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: mypvc-claim
          persistentVolumeClaim:
            claimName: mypvc
