examples/nginx-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - name: svc-port
      protocol: TCP
      port: 80
      targetPort: nginx-port
